add list elements

--- a/my-first-website.html
+++ b/my-first-website.html
@@ -4,7 +4,17 @@
     <title>My first web page</title>
   </head>
   <body>
+    <h1>My First Webpage</h1>
+    <h2>Written with a little guidance from Moringa School</h2>
+
     <p>Hello, world!</p>
     <p>welcome to my first web page!</p>
+    <p>Here are some things I'm going to learn about coding:</p>
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScripts</li>
+        <li>And a lot more!</li>
+    </ul>
   </body>
 </html>
