--- a/my-first-website.html
+++ b/my-first-website.html
@@ -5,10 +5,13 @@
   </head>
   <body>
     <h1>My First Webpage</h1>
-    <h2>Written with a little guidance from Moringa School</h2>
+    <h2>Written with a little guidance from <em>Moringa School</em></h2>
 
     <p>Hello, world!</p>
-    <p>welcome to my first web page!</p>
+    <p>welcome to my <strong>first web page</strong>!</p>
+    
+    <p>Check out <a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
+    <img src="Elephant.jpg" alt="A photo of an elephant" width="100%">
     <p>Here are some things I'm going to learn about coding:</p>
     <ul>
         <li>HTML</li>
