adding styles and images

--- a/my-first-website.html
+++ b/my-first-website.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
   <head>
-  
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>My first web page</title>
   </head>
   <body>
@@ -11,7 +11,7 @@
     <p>welcome to my <strong>first web page</strong>!</p>
     
     <p>Check out <a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
-    <img src="Elephant.jpg" alt="A photo of an elephant" width="100%">
+    <img src="images/Elephant.jpg" alt="A photo of an elephant" width="100%">
     <p>Here are some things I'm going to learn about coding:</p>
     <ul>
         <li>HTML</li>
